Adiciona entidades HTML e acentua os caracteres

--- a/index.html
+++ b/index.html
@@ -23,26 +23,12 @@
           <tr style="height: 446px;">
             <td
               style="background-image: url(img-email-1.png); background-repeat: no-repeat; color: white; padding: 30px 30px 30px 40px;">
-              <!-- <h1
-                style="padding-left: 10px; margin-bottom: 5px; background-color: white; color: #143e75; font-size: 2.3rem; max-width: 283px;">
-                O Empr&eacute;stimo</h1>
-              <h1
-                style="padding-left: 10px; margin-bottom: 5px; margin-top: 5px; background-color: white; color: #143e75; font-size: 2.3rem; max-width: 233px;">
-                mais barato</h1>
-              <h1
-                style="padding-left: 10px; margin-top: 5px; background-color: white; color: #143e75; font-size: 2.3rem; max-width: 312px;">
-                &eacute; o Consignado.</h1> -->
-              <!-- <h2 style="font-weight: normal; margin-bottom: 5px; padding-left: 10px; font-size: 1.2rem; max-width: 252px; background-color: #143e75;">O
-                CONSIGNADO ONLINE</h2>
-              <h2 style="font-weight: normal; margin-top: 5px; margin-bottom: 5px; padding-left: 10px; font-size: 1.2rem; max-width: 186px; background-color: #143e75;">MAIS
-                CONFI&Aacute;VEL,</h2>
-              <h2
-                style="font-weight: normal; margin-top: 5px; margin-bottom: 40px; padding-left: 10px; font-size: 1.2rem; max-width: 228px; background-color: #143e75;">
-                &Eacute;
-                DO
-                PARAN&Aacute; BANCO</h2> -->
-              <a style="background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid white; padding: 17px 60px; border-radius: 5px; border-color: #2593f7"
-                href="https://emprestimo.paranabanco.b.br">Simular Empr&eacute;stimo</a>
+              <a href="https://emprestimo.paranabanco.b.br">
+                <button
+                  style="cursor: pointer; font-family: inherit; position: relative; top: 170px; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid #2593f7; padding: 17px 60px; border-radius: 5px;">
+                  <strong>Simular Empr&eacute;stimo</strong>
+                </button>
+              </a>
             </td>
           </tr>
 
@@ -51,9 +37,10 @@
               <table align="center" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
                   <td align="center">
-                    <h2 style="font-size: 1.1rem; margin-top: 40px;">Conhe&ccedil;a o Empr&eacute;stimo Consignado do
+                    <h3 style="line-height: 30px; margin-top: 40px;">Conhe&ccedil;a o
+                      Empr&eacute;stimo Consignado do
                       Paraná Banco:
-                    </h2>
+                    </h3>
                   </td>
                 </tr>
               </table>
@@ -61,15 +48,13 @@
                 style="margin-top: 30px; list-style: none; padding-left: 30px; box-sizing: border-box; display: block;">
                 <table cellpadding="0" cellspacing="0" width="100%">
                   <tr>
-                    <li
-                      style="font-size: 14px; line-height: 24px; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
+                    <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
                         <img src="shield.png" alt="Ícone de escudo" />
                         Sem consulta no SPC ou SERASA
                       </p>
                     </li>
-                    <li
-                      style="font-size: 14px; line-height: 24px; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
+                    <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
                         <img src="shield.png" alt="Ícone de escudo" />
                         Juros at&eacute; 4x menor que de Empr&eacute;stimo Pessoal
@@ -77,8 +62,7 @@
                     </li>
                   </tr>
                   <tr>
-                    <li
-                      style="font-size: 14px; line-height: 24px; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
+                    <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
                         <img src="shield.png" alt="Ícone de escudo" />
                         Contrata&ccedil;&atilde;o 100% online e segura</p>
@@ -93,31 +77,35 @@
             <td align="center" style="font-size: .8rem; color: white; padding: 30px 30px 60px 30px;" bgcolor="#2593f7">
               <img src="emoji-piscando.png" alt="Ícone emoji piscando" />
               <h2 style="margin-bottom: 40px;">Fa&ccedil;a agora uma simula&ccedil;&atilde;o sem compromisso</h2>
-              <a style="font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid white; padding: 10px 70px; border-radius: 4px;"
-                href="https://emprestimo.paranabanco.b.br">Simular agora</a>
+              <a href="https://emprestimo.paranabanco.b.br">
+                <button
+                  style="cursor: pointer; font-family: inherit; background-color: inherit; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid white; padding: 17px 60px; border-radius: 5px;">
+                  <strong>Simular agora</strong>
+                </button>
+              </a>
             </td>
           </tr>
 
           <tr>
             <td>
-              <table style="padding-top: 40px; padding-bottom: 40px;" align="center" cellpadding="11" cellspacing="0"
+              <table style="padding-top: 40px; padding-bottom: 15px;" align="center" cellpadding="11" cellspacing="0"
                 width="80%">
                 <tr>
                   <td align="center">
                     <span
-                      style="margin-bottom: 5px; display: block; font-size: .7rem; font-weight: bold; color: #2593f7;">SAC</span>
-                    <span style="color: #999; margin: 5px 0;">0800 645 6090</span>
+                      style="margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">SAC</span>
+                    <span style="font-size: .8rem; color: #999; margin: 5px 0;">0800 645 6090</span>
                   </td>
                   <td align="center">
                     <span
-                      style="margin-bottom: 5px; display: block; font-size: .7rem; font-weight: bold; color: #2593f7;">SAC
+                      style="margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">SAC
                       deficiente auditivo</span>
-                    <span style="color: #999; margin: 5px 0;">0800 645 6091</span>
+                    <span style="font-size: .8rem; color: #999; margin: 5px 0;">0800 645 6091</span>
                   </td>
                   <td align="center">
                     <span
-                      style="margin-bottom: 5px; display: block; font-size: .7rem; font-weight: bold; color: #2593f7;">Ouvidoria</span>
-                    <span style="color: #999; margin: 5px 0;">0800 645 6094</span>
+                      style="margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">Ouvidoria</span>
+                    <span style="font-size: .8rem; color: #999; margin: 5px 0;">0800 645 6094</span>
                   </td>
                 </tr>
               </table>
@@ -127,16 +115,16 @@
           <tr>
             <td style="padding: 0 30px 30px 30px;">
               <p style="text-align: justify; font-size: .5rem; color: #aaaaaa">
-                Crédito sujeito a margem consignável disponível e adequação à
-                política de concessão estabelecida pelo Paraná Banco. Valores de
+                Cr&eacute;dito sujeito a margem consign&aacute;vel dispon&iacute;vel e adequa&ccedil;&atilde;o à
+                pol&iacute;tica de concess&atilde;o estabelecida pelo Paran&aacute; Banco. Valores de
                 parcelas, prazos, taxa de juros, tarifas e CET (Custo Efetivo Total)
-                podem variar conforme o Órgão Empregador e a qualquer tempo, sem
-                necessidade de aviso prévio. Os prazos das operações podem variar de
-                06 a 72 meses. Taxa de Juros máxima de 2,07% a.m e/ou 32,71 a.a.
-                Todas as operações de crédito têm incidência de IOF, conforme
-                legislação vigente. É assegurado ao mutuário o pagamento antecipado
-                a qualquer tempo. Exemplo (não representa oferta de crédito): Valor
-                do crédito R$5.000,00 | Prazo: 12 meses | Juros: 2,07% ao mês | CET:
+                podem variar conforme o &Oacute;rg&atilde;o Empregador e a qualquer tempo, sem
+                necessidade de aviso pr&eacute;vio. Os prazos das opera&ccedil;ões podem variar de
+                06 a 72 meses. Taxa de Juros m&aacute;xima de 2,07% a.m e/ou 32,71 a.a.
+                Todas as opera&ccedil;ões de cr&eacute;dito têm incidência de IOF, conforme
+                legisla&ccedil;&atilde;o vigente. &Eacute; assegurado ao mutu&aacute;rio o pagamento antecipado
+                a qualquer tempo. Exemplo (n&atilde;o representa oferta de cr&eacute;dito): Valor
+                do cr&eacute;dito R$5.000,00 | Prazo: 12 meses | Juros: 2,07% ao mês | CET:
                 2,35% ao mês ou 32,71 ao ano | Valor da parcela mensal: R$498,40 |
                 IOF: R$113,56 | Valor total a pagar ao final de 12 meses R$5.980,80
               </p>
