Ajusta caracteres que ainda estava acentuados para as entidades HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Paraná Banco | Empr&eacute;stimo Consignado Online</title>
+  <title>Paran&aacute; Banco | Empr&eacute;stimo Consignado Online</title>
 </head>
 
 <body style="margin: 0; padding: 0; font-family: 'Montserrat', sans-serif">
@@ -15,8 +15,8 @@
           <tr align="center" bgcolor="white">
             <td style="padding: 30px 30px 0 30px;">
               <a href="https://www.paranabanco.com.br" style="text-decoration: inherit;">
-                <img src="logo.png" style="display: block; margin: 0 auto;" alt="Logo do Paraná Banco"
-                  title="Paraná Banco" />
+                <img src="logo.png" style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
+                  title="Paran&aacute; Banco" />
               </a>
             </td>
           </tr>
@@ -39,7 +39,7 @@
                   <td align="center">
                     <h3 style="line-height: 30px; margin-top: 40px;">Conhe&ccedil;a o
                       Empr&eacute;stimo Consignado do
-                      Paraná Banco:
+                      Paran&aacute; Banco:
                     </h3>
                   </td>
                 </tr>
