--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
           <tr align="center" bgcolor="white">
             <td style="padding: 30px 30px 0 30px;">
               <a href="https://www.paranabanco.com.br" style="text-decoration: inherit;">
-                <img src="logo.png" style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
+                <img src="https://prbmarketingdigital.z15.web.core.windows.net/logo.png" style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
                   title="Paran&aacute; Banco" />
               </a>
             </td>
           </tr>
           <tr style="height: 446px;">
             <td
-              style="background-image: url(img-email-1.png); background-repeat: no-repeat; color: white; padding: 30px 30px 30px 40px;">
+              style="background-image: url(https://prbmarketingdigital.z15.web.core.windows.net/img-email-1.png); background-repeat: no-repeat; color: white; padding: 30px 30px 30px 40px;">
               <a href="https://emprestimo.paranabanco.b.br">
                 <button
                   style="cursor: pointer; font-family: inherit; position: relative; top: 170px; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid #2593f7; padding: 17px 60px; border-radius: 5px;">
@@ -50,13 +50,13 @@
                   <tr>
                     <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
-                        <img src="shield.png" alt="Ícone de escudo" />
+                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
                         Sem consulta no SPC ou SERASA
                       </p>
                     </li>
                     <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
-                        <img src="shield.png" alt="Ícone de escudo" />
+                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
                         Juros at&eacute; 4x menor que de Empr&eacute;stimo Pessoal
                       </p>
                     </li>
@@ -64,7 +64,7 @@
                   <tr>
                     <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
-                        <img src="shield.png" alt="Ícone de escudo" />
+                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
                         Contrata&ccedil;&atilde;o 100% online e segura</p>
                     </li>
                   </tr>
@@ -75,7 +75,7 @@
 
           <tr>
             <td align="center" style="font-size: .8rem; color: white; padding: 30px 30px 60px 30px;" bgcolor="#2593f7">
-              <img src="emoji-piscando.png" alt="Ícone emoji piscando" />
+              <img src="https://prbmarketingdigital.z15.web.core.windows.net/emoji-piscando.png" alt="Ícone emoji piscando" />
               <h2 style="margin-bottom: 40px;">Fa&ccedil;a agora uma simula&ccedil;&atilde;o sem compromisso</h2>
               <a href="https://emprestimo.paranabanco.b.br">
                 <button
