Ajusta e-mail no hotmail e no gmail

--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
   <table align="center" cellpadding="0" cellspacing="0" width="100%">
     <tr>
       <td>
-        <table align="center" cellpadding="0" cellspacing="0" width="600">
-          <tr align="center" bgcolor="white">
-            <td style="padding: 30px 30px 0 30px;">
-              <a href="https://www.paranabanco.com.br" style="text-decoration: inherit;">
+        <table style="font-family: 'Montserrat', sans-serif; height: 1337px; max-width: 600px;" align="center" cellpadding="0" cellspacing="0" width="600">
+          <tr style="height: 59px;" align="center" bgcolor="white">
+            <td style="height: 59px; padding: 30px 30px 0 30px;">
+              <a href="https://www.paranabanco.com.br" style="text-decoration: none;">
                 <img src="https://prbmarketingdigital.z15.web.core.windows.net/logo.png" style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
                   title="Paran&aacute; Banco" />
               </a>
             </td>
           </tr>
-          <tr style="height: 446px;">
+
+          <tr style="background-image: url(https://prbmarketingdigital.z15.web.core.windows.net/img-email-1.png); background-repeat: no-repeat; font-family: 'Montserrat', sans-serif; min-height: 446px; height: 446px;">
             <td
-              style="background-image: url(https://prbmarketingdigital.z15.web.core.windows.net/img-email-1.png); background-repeat: no-repeat; color: white; padding: 30px 30px 30px 40px;">
-              <a href="https://emprestimo.paranabanco.b.br">
+              style="font-family: 'Montserrat', sans-serif; min-height: 446px; height: 446px; color: white; padding: 0 55px;">
+              <a href="https://emprestimo.paranabanco.b.br" style="text-decoration: none;">
                 <button
-                  style="cursor: pointer; font-family: inherit; position: relative; top: 170px; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid #2593f7; padding: 17px 60px; border-radius: 5px;">
+                  style="margin-top: 335px; cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid #2593f7; padding: 17px 60px; border-radius: 5px;">
                   <strong>Simular Empr&eacute;stimo</strong>
                 </button>
               </a>
@@ -33,10 +34,10 @@
           </tr>
 
           <tr>
-            <td style="padding: 15px 30px 30px 30px;" bgcolor="#ebebeb">
-              <table align="center" cellpadding="0" cellspacing="0" width="100%">
+            <td style="font-family: 'Montserrat', sans-serif; padding: 15px 30px 30px 30px;" bgcolor="#ebebeb">
+              <table style="font-family: 'Montserrat', sans-serif;" align="center" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
-                  <td align="center">
+                  <td style="font-family: 'Montserrat', sans-serif;" align="center">
                     <h3 style="line-height: 30px; margin-top: 40px;">Conhe&ccedil;a o
                       Empr&eacute;stimo Consignado do
                       Paran&aacute; Banco:
@@ -48,13 +49,13 @@
                 style="margin-top: 30px; list-style: none; padding-left: 30px; box-sizing: border-box; display: block;">
                 <table cellpadding="0" cellspacing="0" width="100%">
                   <tr>
-                    <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
+                    <li style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
                         <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
                         Sem consulta no SPC ou SERASA
                       </p>
                     </li>
-                    <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
+                    <li style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
                         <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
                         Juros at&eacute; 4x menor que de Empr&eacute;stimo Pessoal
@@ -62,7 +63,7 @@
                     </li>
                   </tr>
                   <tr>
-                    <li style="font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
+                    <li style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
                       <p>
                         <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
                         Contrata&ccedil;&atilde;o 100% online e segura</p>
@@ -77,9 +78,9 @@
             <td align="center" style="font-size: .8rem; color: white; padding: 30px 30px 60px 30px;" bgcolor="#2593f7">
               <img src="https://prbmarketingdigital.z15.web.core.windows.net/emoji-piscando.png" alt="Ícone emoji piscando" />
               <h2 style="margin-bottom: 40px;">Fa&ccedil;a agora uma simula&ccedil;&atilde;o sem compromisso</h2>
-              <a href="https://emprestimo.paranabanco.b.br">
+              <a href="https://emprestimo.paranabanco.b.br" style="text-decoration: none;">
                 <button
-                  style="cursor: pointer; font-family: inherit; background-color: inherit; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid white; padding: 17px 60px; border-radius: 5px;">
+                  style="cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid white; padding: 17px 60px; border-radius: 5px;">
                   <strong>Simular agora</strong>
                 </button>
               </a>
