--- a/index.html
+++ b/index.html
@@ -11,34 +11,41 @@
   <table align="center" cellpadding="0" cellspacing="0" width="100%">
     <tr>
       <td>
-        <table style="font-family: 'Montserrat', sans-serif; height: 1337px; max-width: 600px;" align="center" cellpadding="0" cellspacing="0" width="600">
+        <table style="font-family: 'Montserrat', sans-serif; height: 1337px; max-width: 600px;" align="center"
+          cellpadding="0" cellspacing="0" width="600">
           <tr style="height: 59px;" align="center" bgcolor="white">
             <td style="height: 59px; padding: 30px 30px 0 30px;">
               <a href="https://www.paranabanco.com.br" style="text-decoration: none;">
-                <img src="https://prbmarketingdigital.z15.web.core.windows.net/logo.png" style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
+                <img src="https://prbmarketingdigital.z15.web.core.windows.net/logo.png"
+                  style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
                   title="Paran&aacute; Banco" />
               </a>
             </td>
           </tr>
 
-          <tr style="background-image: url(https://prbmarketingdigital.z15.web.core.windows.net/img-email-1.png); background-repeat: no-repeat; font-family: 'Montserrat', sans-serif; min-height: 446px; height: 446px;">
+          <tr
+            style="display: block; background-image: url(https://prbmarketingdigital.z15.web.core.windows.net/img-email-1.png); background-repeat: no-repeat; font-family: 'Montserrat', sans-serif; height: 446px; width: 600px;">
+            <td style="display: block;"></td>
             <td
-              style="font-family: 'Montserrat', sans-serif; min-height: 446px; height: 446px; color: white; padding: 0 55px;">
+              style="font-family: 'Montserrat', sans-serif; height: 446px; width: 600px; color: white; padding: 0 55px;">
               <a href="https://emprestimo.paranabanco.b.br" style="text-decoration: none;">
                 <button
-                  style="margin-top: 335px; cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid #2593f7; padding: 17px 60px; border-radius: 5px;">
+                  style="margin-top: 360px; cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid #2593f7; padding: 17px 60px; border-radius: 5px;">
                   <strong>Simular Empr&eacute;stimo</strong>
                 </button>
               </a>
             </td>
+            <td style="display: block;"></td>
           </tr>
 
           <tr>
             <td style="font-family: 'Montserrat', sans-serif; padding: 15px 30px 30px 30px;" bgcolor="#ebebeb">
-              <table style="font-family: 'Montserrat', sans-serif;" align="center" cellpadding="0" cellspacing="0" width="100%">
+              <table style="font-family: 'Montserrat', sans-serif;" align="center" cellpadding="0" cellspacing="0"
+                width="100%">
                 <tr>
-                  <td style="font-family: 'Montserrat', sans-serif;" align="center">
-                    <h3 style="line-height: 30px; margin-top: 40px;">Conhe&ccedil;a o
+                  <td font-family: 'Montserrat' , sans-serif;" align="center">
+                    <h3 style="font-family: 'Montserrat', sans-serif; line-height: 30px; margin-top: 40px;">
+                      Conhe&ccedil;a o
                       Empr&eacute;stimo Consignado do
                       Paran&aacute; Banco:
                     </h3>
@@ -49,23 +56,29 @@
                 style="margin-top: 30px; list-style: none; padding-left: 30px; box-sizing: border-box; display: block;">
                 <table cellpadding="0" cellspacing="0" width="100%">
                   <tr>
-                    <li style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
-                      <p>
-                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
+                    <li
+                      style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 30px; color: rgb(51, 51, 51); position: relative;">
+                      <p style="font-family: 'Montserrat', sans-serif;">
+                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png"
+                          alt="Ícone de escudo" />
                         Sem consulta no SPC ou SERASA
                       </p>
                     </li>
-                    <li style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
-                      <p>
-                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
+                    <li
+                      style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 30px; color: rgb(51, 51, 51); position: relative;">
+                      <p style="font-family: 'Montserrat', sans-serif;">
+                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png"
+                          alt="Ícone de escudo" />
                         Juros at&eacute; 4x menor que de Empr&eacute;stimo Pessoal
                       </p>
                     </li>
                   </tr>
                   <tr>
-                    <li style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 20px; color: rgb(51, 51, 51); position: relative;">
-                      <p>
-                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png" alt="Ícone de escudo" />
+                    <li
+                      style="font-family: 'Montserrat', sans-serif; font-size: .8rem; margin-bottom: 30px; color: rgb(51, 51, 51); position: relative;">
+                      <p style="font-family: 'Montserrat', sans-serif;">
+                        <img src="https://prbmarketingdigital.z15.web.core.windows.net/shield.png"
+                          alt="Ícone de escudo" />
                         Contrata&ccedil;&atilde;o 100% online e segura</p>
                     </li>
                   </tr>
@@ -76,8 +89,10 @@
 
           <tr>
             <td align="center" style="font-size: .8rem; color: white; padding: 30px 30px 60px 30px;" bgcolor="#2593f7">
-              <img src="https://prbmarketingdigital.z15.web.core.windows.net/emoji-piscando.png" alt="Ícone emoji piscando" />
-              <h2 style="margin-bottom: 40px;">Fa&ccedil;a agora uma simula&ccedil;&atilde;o sem compromisso</h2>
+              <img src="https://prbmarketingdigital.z15.web.core.windows.net/emoji-piscando.png"
+                alt="Ícone emoji piscando" />
+              <h2 style="font-family: 'Montserrat', sans-serif; margin-bottom: 40px;">Fa&ccedil;a agora uma
+                simula&ccedil;&atilde;o sem compromisso</h2>
               <a href="https://emprestimo.paranabanco.b.br" style="text-decoration: none;">
                 <button
                   style="cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid white; padding: 17px 60px; border-radius: 5px;">
@@ -94,18 +109,18 @@
                 <tr>
                   <td align="center">
                     <span
-                      style="margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">SAC</span>
+                      style="font-family: 'Montserrat', sans-serif; margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">SAC</span>
                     <span style="font-size: .8rem; color: #999; margin: 5px 0;">0800 645 6090</span>
                   </td>
                   <td align="center">
                     <span
-                      style="margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">SAC
+                      style="font-family: 'Montserrat', sans-serif; margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">SAC
                       deficiente auditivo</span>
                     <span style="font-size: .8rem; color: #999; margin: 5px 0;">0800 645 6091</span>
                   </td>
                   <td align="center">
                     <span
-                      style="margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">Ouvidoria</span>
+                      style="font-family: 'Montserrat', sans-serif; margin-bottom: 5px; display: block; font-size: .8rem; font-weight: bold; color: #2593f7;">Ouvidoria</span>
                     <span style="font-size: .8rem; color: #999; margin: 5px 0;">0800 645 6094</span>
                   </td>
                 </tr>
@@ -115,7 +130,7 @@
 
           <tr>
             <td style="padding: 0 30px 30px 30px;">
-              <p style="text-align: justify; font-size: .5rem; color: #aaaaaa">
+              <p style="font-family: 'Montserrat', sans-serif; text-align: justify; font-size: .5rem; color: #aaaaaa">
                 Cr&eacute;dito sujeito a margem consign&aacute;vel dispon&iacute;vel e adequa&ccedil;&atilde;o à
                 pol&iacute;tica de concess&atilde;o estabelecida pelo Paran&aacute; Banco. Valores de
                 parcelas, prazos, taxa de juros, tarifas e CET (Custo Efetivo Total)
