Adiciona a url para o 'O Empréstimo mais barato é o Consignado'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           cellpadding="0" cellspacing="0" width="600">
           <tr style="height: 59px;" align="center" bgcolor="white">
             <td style="height: 59px; padding: 30px 30px 0 30px;">
-              <a href="https://www.paranabanco.com.br" style="text-decoration: none;">
+              <a href="https://emprestimo.paranabanco.b.br/?utm_source=sambadigital&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=emprestimo_barato&utm_campaign=sambadigital-email-aposentados_pensionistas-emprestimo_barato-conversao_junho/?utm_source=sambadigital&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=emprestimo_barato&utm_campaign=sambadigital-email-aposentados_pensionistas-emprestimo_barato-conversao_junho" style="text-decoration: none;">
                 <img src="https://prbmarketingdigital.z15.web.core.windows.net/logo.png"
                   style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
                   title="Paran&aacute; Banco" />
@@ -28,7 +28,7 @@
             <td style="display: block;"></td>
             <td
               style="font-family: 'Montserrat', sans-serif; height: 446px; width: 600px; color: white; padding: 0 55px;">
-              <a href="https://emprestimo.paranabanco.b.br" style="text-decoration: none;">
+              <a href="https://emprestimo.paranabanco.b.br/?utm_source=sambadigital&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=emprestimo_barato&utm_campaign=sambadigital-email-aposentados_pensionistas-emprestimo_barato-conversao_junho" style="text-decoration: none;">
                 <button
                   style="margin-top: 360px; cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid #2593f7; padding: 17px 60px; border-radius: 5px;">
                   <strong>Simular Empr&eacute;stimo</strong>
@@ -93,7 +93,7 @@
                 alt="Ícone emoji piscando" />
               <h2 style="font-family: 'Montserrat', sans-serif; margin-bottom: 40px;">Fa&ccedil;a agora uma
                 simula&ccedil;&atilde;o sem compromisso</h2>
-              <a href="https://emprestimo.paranabanco.b.br" style="text-decoration: none;">
+              <a href="https://emprestimo.paranabanco.b.br/?utm_source=sambadigital&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=emprestimo_barato&utm_campaign=sambadigital-email-aposentados_pensionistas-emprestimo_barato-conversao_junho" style="text-decoration: none;">
                 <button
                   style="cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid white; padding: 17px 60px; border-radius: 5px;">
                   <strong>Simular agora</strong>
