--- a/emprestimo-barato-04-jun.html
+++ b/emprestimo-barato-04-jun.html
@@ -15,7 +15,7 @@
           cellpadding="0" cellspacing="0" width="600">
           <tr style="height: 59px;" align="center" bgcolor="white">
             <td style="height: 59px; padding: 30px 30px 0 30px;">
-              <a href="https://emprestimo.paranabanco.b.br/?utm_source=sambadigital&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=emprestimo_barato&utm_campaign=sambadigital-email-aposentados_pensionistas-emprestimo_barato-conversao_junho/?utm_source=sambadigital&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=emprestimo_barato&utm_campaign=sambadigital-email-aposentados_pensionistas-emprestimo_barato-conversao_junho" style="text-decoration: none;">
+              <a href="https://emprestimo.paranabanco.b.br/?utm_source=sambadigital&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=emprestimo_barato&utm_campaign=sambadigital-email-aposentados_pensionistas-emprestimo_barato-conversao_junho" style="text-decoration: none;">
                 <img src="https://prbmarketingdigital.z15.web.core.windows.net/logo.png"
                   style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
                   title="Paran&aacute; Banco" />
