--- a/lets-performance-emprestimo-barato.html
+++ b/lets-performance-emprestimo-barato.html
@@ -9,7 +9,7 @@
 
 <body style="margin: 0; padding: 0; font-family: 'Montserrat', sans-serif">
   <a style="text-decoration: none;"
-    href="https://emprestimo.paranabanco.b.br/?utm_source=leadmedia&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=cpa_30&utm_campaign=leadmedia-email-aposentados_pensionistas-cpa_30-emprestimo_barato">
+    href="https://emprestimo.paranabanco.b.br/">
     <table align="center" cellpadding="0" cellspacing="0" width="100%">
       <tr>
         <td>
@@ -17,7 +17,7 @@
             cellpadding="0" cellspacing="0" width="600">
             <tr style="height: 59px;" align="center" bgcolor="white">
               <td style="height: 59px; padding: 30px 30px 0 30px;">
-                <a href="https://emprestimo.paranabanco.b.br/?utm_source=leadmedia&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=cpa_30&utm_campaign=leadmedia-email-aposentados_pensionistas-cpa_30-emprestimo_barato"
+                <a href="https://emprestimo.paranabanco.b.br/"
                   style="text-decoration: none;">
                   <img src="https://prbmarketingdigital.z15.web.core.windows.net/logo.png"
                     style="display: block; margin: 0 auto;" alt="Logo do Paran&aacute; Banco"
@@ -31,7 +31,7 @@
               <td style="display: block;"></td>
               <td
                 style="font-family: 'Montserrat', sans-serif; height: 446px; width: 600px; color: white; padding: 0 55px;">
-                <a href="https://emprestimo.paranabanco.b.br/?utm_source=leadmedia&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=cpa_30&utm_campaign=leadmedia-email-aposentados_pensionistas-cpa_30-emprestimo_barato"
+                <a href="https://emprestimo.paranabanco.b.br/"
                   style="text-decoration: none;">
                   <button
                     style="margin-top: 360px; cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid #2593f7; padding: 17px 60px; border-radius: 5px;">
@@ -98,7 +98,7 @@
                   alt="Ícone emoji piscando" />
                 <h2 style="font-family: 'Montserrat', sans-serif; margin-bottom: 40px;">Fa&ccedil;a agora uma
                   simula&ccedil;&atilde;o sem compromisso</h2>
-                <a href="https://emprestimo.paranabanco.b.br/?utm_source=leadmedia&utm_medium=email&utm_term=aposentados_pensionistas&utm_content=cpa_30&utm_campaign=leadmedia-email-aposentados_pensionistas-cpa_30-emprestimo_barato"
+                <a href="https://emprestimo.paranabanco.b.br/"
                   style="text-decoration: none;">
                   <button
                     style="cursor: pointer; font-family: 'Montserrat', sans-serif; background-color: #2593f7; font-size: 1.2rem; text-decoration: none; color: white; border: 2px solid white; padding: 17px 60px; border-radius: 5px;">
